--- a/build.gradle
+++ b/build.gradle
@@ -2,13 +2,15 @@
 
 buildscript {
     ext.kotlin_version = '1.1.3-2'
+    ext.sdk_tools_version='26.0.0'
+    ext.targetVersion = "26"
 
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta2'
+        classpath 'com.android.tools.build:gradle:3.0.0-beta4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +22,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://raw.github.com/bmob/bmob-android-sdk/master" }
     }
 }
 
